[gd_scene load_steps=2 format=3 uid="uid://cxowpht26602t"]

[ext_resource type="Script" path="res://player_input.gd" id="1_dl78o"]

[node name="PlayerInput" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(200, 100)
always_on_top = true
script = ExtResource("1_dl78o")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0922204, 0.184686, 0.241847, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
columns = 2

[node name="Food" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Food"

[node name="Eat" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Button 2"

[node name="Sleep" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = " Button 3"

[node name="Clean" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Button 4"

[connection signal="pressed" from="CenterContainer/GridContainer/Food" to="." method="_on_food_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Eat" to="." method="_on_eat_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Sleep" to="." method="_on_sleep_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Clean" to="." method="_on_clean_pressed"]
