extends Window


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_food_pressed() -> void:
	
	
	pass # Replace with function body.


func _on_eat_pressed() -> void:
	pass # Replace with function body.


func _on_sleep_pressed() -> void:
	pass # Replace with function body.


func _on_clean_pressed() -> void:
	pass # Replace with function body.
